--- a/index.html
+++ b/index.html
@@ -79,14 +79,16 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
+      <div class="mask-container">
       <main class="content">
         <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque,
           nostrum!
         </p>
-        <a href="#menu" class="cta">Beli Sekarang</a>
+        <!-- <a href="#menu" class="cta">Beli Sekarang</a> -->
       </main>
+    </div>
     </section>
     <!-- Akhir Hero Section -->
 
